--- a/package.json
+++ b/package.json
@@ -28,15 +28,17 @@
     "@capacitor/cli": "6.1.1",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/compiler-sfc": "^3.4.34",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.3.0",
+    "@vue/tsconfig": "^0.5.1",
     "cypress": "^13.5.0",
     "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^22.1.0",
     "tailwindcss": "^3.4.7",
     "terser": "^5.4.0",
-    "typescript": "^5.1.6",
+    "typescript": "^5.5.4",
     "vite": "~5.2.0",
     "vitest": "^0.34.6",
     "vue-tsc": "^2.0.22"
